--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Shaddock
-subtitle: 爱音乐
+title: Song
+subtitle: 自命不凡，却无足轻重
 description: Maybe i never told you.
-author: Peng Song
-language:
+author: Song
+language: zh-Hans
 timezone:
 
 # URL
@@ -63,7 +63,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: fexo
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
